# HHS_HCC_SQL_container

./: .env.example  .gitignore  README.md  config.yml  main.py  pyproject.toml
.github/workflows/: deploy-dbt-docs.yml
DIY-Model-Script/: diy_model_script.sql
Table-Load-Scripts/: 2 - Input Table Creation.sql  dbo.Rating_Area_CountyMap.Table.sql  dbo.metal_level_mapping.Table.sql
containers/mssql/: docker-compose.yml
containers/mssql/init/: bootstrap.sql
docker/mssql/: docker-compose.yml
docker/mssql/init/: bootstrap.sql
scripts/: generate_seed_data.py  run_parametrized_diy_model.py
transform/: README.md  dbt_env.sh  dbt_project.yml  make_static_docs.py  requirements.txt
transform/models/mart/: agg_member_risk_score.sql  fct_hcc_list.sql  schema.yml
transform/models/staging/: schema.yml  sources.yml  stg_csr_adj_factors.sql  stg_dx_mapping.sql  stg_enrollment.sql  stg_federal_age_curve.sql  stg_gcf.sql  stg_hcc_list.sql  stg_hcpcs_rxc.sql  stg_medical_claims.sql  stg_metal_level_mapping.sql  stg_ndc_rxc.sql  stg_pharmacy_claims.sql  stg_rating_area_county_map.sql  stg_risk_score_factors.sql  stg_service_code_reference.sql  stg_statewide_ra_factors.sql  stg_supplemental.sql
transform/profiles/: .user.yml  profiles.yml
transform/seeds/: CSR_Adj_Factors.csv  DX_Mapping_Table.csv  Federal_Age_Curve.csv  GCF.csv  Rating_Area_CountyMap.csv  RiskScoreFactors.csv  Statewide_RA_Factors.csv  enrollment.csv  hcpcsrxc.csv  medicalclaims.csv  metal_level_mapping.csv  ndc_rxc.csv  pharmacyclaims.csv  properties.yml  servicecodereference.csv  supplemental.csv
