[project]
name = "hhs-hcc-sql-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-core>=1.10.15",
    "dbt-sqlserver>=1.9.0",
    "faker>=39.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.0",
    "pyodbc>=5.2.0",
    "pyyaml>=6.0.2",
]
